fix light and dark mode

--- a/social-media-dashboard-with-theme-switcher/src/output.css
+++ b/social-media-dashboard-with-theme-switcher/src/output.css
@@ -10,7 +10,10 @@
       "Courier New", monospace;
     --color-green-400: oklch(79.2% 0.209 151.711);
     --color-blue-500: oklch(62.3% 0.214 259.815);
+    --color-gray-100: oklch(96.7% 0.003 264.542);
+    --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-300: oklch(87.2% 0.01 258.338);
+    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-black: #000;
     --color-white: #fff;
@@ -215,6 +218,24 @@
   .left-1 {
     left: calc(var(--spacing) * 1);
   }
+  .container {
+    width: 100%;
+    @media (width >= 40rem) {
+      max-width: 40rem;
+    }
+    @media (width >= 48rem) {
+      max-width: 48rem;
+    }
+    @media (width >= 64rem) {
+      max-width: 64rem;
+    }
+    @media (width >= 80rem) {
+      max-width: 80rem;
+    }
+    @media (width >= 96rem) {
+      max-width: 96rem;
+    }
+  }
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
@@ -223,6 +244,9 @@
   }
   .mx-6 {
     margin-inline: calc(var(--spacing) * 6);
+  }
+  .mx-10 {
+    margin-inline: calc(var(--spacing) * 10);
   }
   .mx-auto {
     margin-inline: auto;
@@ -256,6 +280,9 @@
   }
   .mr-3 {
     margin-right: calc(var(--spacing) * 3);
+  }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
   }
   .mb-5 {
     margin-bottom: calc(var(--spacing) * 5);
@@ -314,6 +341,12 @@
   .w-96 {
     width: calc(var(--spacing) * 96);
   }
+  .w-full {
+    width: 100%;
+  }
+  .max-w-7xl {
+    max-width: var(--container-7xl);
+  }
   .translate-x-full {
     --tw-translate-x: 100%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
@@ -351,6 +384,10 @@
   .rounded-md {
     border-radius: var(--radius-md);
   }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .border-t {
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
@@ -368,14 +405,17 @@
   .border-\[\#e77110\] {
     border-color: #e77110;
   }
+  .border-gray-200 {
+    border-color: var(--color-gray-200);
+  }
   .border-gray-600 {
     border-color: var(--color-gray-600);
   }
   .bg-dark-desaturated-blue-card-bg {
     background-color: var(--color-dark-desaturated-blue-card-bg);
   }
-  .bg-gray-300 {
-    background-color: var(--color-gray-300);
+  .bg-gray-400 {
+    background-color: var(--color-gray-400);
   }
   .bg-very-dark-blue-bg {
     background-color: var(--color-very-dark-blue-bg);
@@ -397,12 +437,6 @@
   }
   .p-0 {
     padding: calc(var(--spacing) * 0);
-  }
-  .px-0\.5 {
-    padding-inline: calc(var(--spacing) * 0.5);
-  }
-  .px-2 {
-    padding-inline: calc(var(--spacing) * 2);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
@@ -520,44 +554,19 @@
       }
     }
   }
-  .lg\:mx-64 {
+  .lg\:mx-0 {
     @media (width >= 64rem) {
-      margin-inline: calc(var(--spacing) * 64);
+      margin-inline: calc(var(--spacing) * 0);
     }
   }
-  .lg\:mx-68 {
+  .lg\:mt-0 {
     @media (width >= 64rem) {
-      margin-inline: calc(var(--spacing) * 68);
+      margin-top: calc(var(--spacing) * 0);
     }
   }
-  .lg\:mx-auto {
+  .lg\:mb-0 {
     @media (width >= 64rem) {
-      margin-inline: auto;
-    }
-  }
-  .lg\:mt-3 {
-    @media (width >= 64rem) {
-      margin-top: calc(var(--spacing) * 3);
-    }
-  }
-  .lg\:-ml-14 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * -14);
-    }
-  }
-  .lg\:-ml-28 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * -28);
-    }
-  }
-  .lg\:-ml-43 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * -43);
-    }
-  }
-  .lg\:-ml-44 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * -44);
+      margin-bottom: calc(var(--spacing) * 0);
     }
   }
   .lg\:flex {
@@ -575,29 +584,14 @@
       display: none;
     }
   }
-  .lg\:w-64 {
-    @media (width >= 64rem) {
-      width: calc(var(--spacing) * 64);
-    }
-  }
   .lg\:w-screen {
     @media (width >= 64rem) {
       width: 100vw;
     }
   }
-  .lg\:max-w-7xl {
-    @media (width >= 64rem) {
-      max-width: var(--container-7xl);
-    }
-  }
   .lg\:grid-cols-4 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(4, minmax(0, 1fr));
-    }
-  }
-  .lg\:content-between {
-    @media (width >= 64rem) {
-      align-content: space-between;
     }
   }
   .lg\:items-center {
@@ -615,14 +609,14 @@
       justify-content: center;
     }
   }
-  .lg\:gap-0 {
+  .lg\:gap-6 {
     @media (width >= 64rem) {
-      gap: calc(var(--spacing) * 0);
+      gap: calc(var(--spacing) * 6);
     }
   }
-  .lg\:gap-0\.5 {
+  .lg\:px-6 {
     @media (width >= 64rem) {
-      gap: calc(var(--spacing) * 0.5);
+      padding-inline: calc(var(--spacing) * 6);
     }
   }
   .lg\:px-14 {
